# illemont-quickref

./: README.md  actions-in-combat.html  archives.html  authors.html  brass-knuckles.html  categories.html  chompy.html  critical-rolls.html  fiends-dream.html  firearms.html  index.html  index2.html  index3.html  index4.html  jar-of-hands4.html  pelicanconf.py  pyproject.toml  resurrections.html  revised-silvery-barbs.html  search-index.st  search.toml  stupendous-snakey-stick.html  switchblades.html  tags.html  tusk-swords.html  vin-mariani.html
author/: ashley.html  ashley2.html  ashley4.html
category/: homebrew-items.html  pets.html  table-rules.html  table-rules2.html
content/: test.md
content/items/: brass_knuckles.md  fiends_dream.md  halfling_weed.md  laudanum.md  snakey_stick.md  switchblades.md  tusk_swords.md  vin_mariani.md
content/pets/: chompy.md  hands.md
content/rules/: combat.md  criticals.md  firearms.md  pets.md  resurrections.md  silvery_barbs.md
output/: actions-in-combat.html  archives.html  authors.html  categories.html  chompy.html  critical-rolls.html  firearms.html  halfling-weed.html  index.html  index2.html  index3.html  laudanum.html  pets.html  resurrections.html  revised-silvery-barbs.html  search-index.st  search.toml  switchblades.html  tags.html  test.html
output/author/: ashley.html  ashley2.html  ashley3.html
output/category/: homebrew-items.html  homebrew-items2.html  pets.html  table-rules.html  testing.html
themes/illemont-custom/templates/: article.html  base.html  index.html
